syntax = "proto3";

package test;

option go_package = "github.com/SebastienMelki/sebuf/test;test";

message EchoRequest {
  string message = 1;
}

message EchoResponse {
  string message = 1;
}

service TestService {
  rpc Echo(EchoRequest) returns (EchoResponse);
}